--- a/JellyBearsHTML/CalculateInfo/CreatorInfo.html
+++ b/JellyBearsHTML/CalculateInfo/CreatorInfo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>창작자 정보</title>
     <link rel="stylesheet" href="css/creatorInfo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>  
     <div id="wrap">
